[package]
name = "VirtueBot"
version = "0.1.0"
authors = ["Calandrinon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.7.3"